# idascm

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  core.cpp  core.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp
engine/: CMakeLists.txt  argument.cpp  argument.hpp  command.cpp  command.hpp  command_manager.cpp  command_manager.hpp  command_set.cpp  command_set.hpp  decoder.cpp  decoder.hpp  decoder_gta3.cpp  decoder_gta3.hpp  decoder_gtavc.cpp  decoder_gtavc.hpp  engine.hpp  instruction.cpp  instruction.hpp  loader.cpp  loader.hpp  memory.cpp  memory.hpp  operand.cpp  operand.hpp  version.cpp  version.hpp
engine/decoder/: decoder.cpp  decoder.hpp  decoder_gta3.cpp  decoder_gta3.hpp  decoder_gtalcs.cpp  decoder_gtalcs.hpp  decoder_gtavc.cpp  decoder_gtavc.hpp
engine/gta3/: decoder_gta3.cpp  decoder_gta3.hpp  loader_gta3.cpp  loader_gta3.hpp
engine/gtalcs/: decoder_gtalcs.cpp  decoder_gtalcs.hpp  loader_gtalcs.cpp  loader_gtalcs.hpp
engine/gtasa/: decoder_gtasa.cpp  decoder_gtasa.hpp  loader_gtasa.cpp  loader_gtasa.hpp
engine/gtavc/: decoder_gtavc.cpp  decoder_gtavc.hpp
engine/gtavcs/: decoder_gtavcs.cpp  decoder_gtavcs.hpp
ida/: CMakeLists.txt
ida/base/: CMakeLists.txt  base.cpp  base.hpp  memory_ida.cpp  memory_ida.hpp  memory_loader.cpp  memory_loader.hpp
ida/loader/: CMakeLists.txt  loader.cpp  loader.hpp
ida/processor/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  emulator.cpp  emulator.hpp  module.cpp  module.hpp  output.cpp  output.hpp  processor.cpp  processor.hpp
ida/utils/: CMakeLists.txt  memory_api_loader.hpp  utils.cpp  utils.hpp
processor/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  emulator.cpp  emulator.hpp  module.cpp  module.hpp  output.cpp  output.hpp  processor.cpp  processor.hpp
tests/: CMakeLists.txt  test_engine.cpp  test_json.cpp  test_loader.cpp
